# Bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.cmake.in
src/: attack.cpp  attack.hpp  common.hpp  loot.cpp  loot.hpp  main.cpp  module.hpp  player.cpp  player.hpp  sender.cpp  sender.hpp
